# useMyRemoteDevice

./: .gitignore  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
